--- a/cocktailapp/package.json
+++ b/cocktailapp/package.json
@@ -34,11 +34,12 @@
     "bootstrap": "^4.3.1",
     "primeflex": "^1.0.0-rc.1",
     "rxjs": "~6.4.0",
+    "serialize-javascript": "^2.1.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
